2017-03-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3340: jstack.stp should support AArch64
	Patch by Andrew Dinn <adinn@redhat.com>
	and Mark Wielaard <mjw@redhat.com>
	* AUTHORS: Add Andrew Dinn.
	* NEWS: Updated.
	* tapset/jstack.stp.in:
	Add AArch64 support.

2017-02-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS: Set release date of 3.3.0.
	Add 3.4.0 section.
	* configure.ac: Bump to 3.4.0pre00.

2017-01-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3304: zip still a requirement of the underlying
	OpenJDK build
	* NEWS: Updated.
	* configure.ac:
	Use IT_FIND_TOOL macro to require zip.

2017-01-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3303: Allow Kerberos to be detected by old libs
	and headers method if pkg-config check fails
	* Makefile.am:
	(ICEDTEA_PATCHES): Add same fix to OpenJDK configure.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_CHECK_FOR_KERBEROS): Use old IcedTea 2.x method
	with explicit library and header detection if pkg-config
	check fails.
	* patches/pr3303.patch: Fix Kerberos detection in OpenJDK
	in the same way.

2017-01-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3302: zip should be optional, as it's only used
	in the manually invoked dist-openjdk and
	dist-openjdk-fsg rules
	* Makefile.am:
	(dist-openjdk): Check if ${ZIP} is set and fail
	if not.
	(dist-openjdk-fsg): Likewise.
	* NEWS: Updated.
	* configure.ac:
	Use the non-failing AC_PATH_TOOL macro for zip.

2017-01-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3301: Support RHEL multilib installations which
	use the /usr/lib/jvm/java-1.x.0-openjdk.${arch} naming
	* NEWS: Updated.
	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Set RPM_ARCH where the
	RPM architecture name is known (Fedora/RHEL build
	platforms). Remove unused CROSS_TARGET_ARCH from
	sparc, s390x and sh.
	(IT_CHECK_FOR_JDK): Depend on IT_SET_ARCH_SETTINGS.
	Use ${RPM_ARCH} instead of explicit 'x86_64'.

2016-02-15  Andrew John Hughes  <gnu.andrew@redhat.com>