@@ -39,6 +39,7 @@ Marc Schoenefeld <mschoene@redhat.com>
 Keith Seitz <keiths@redhat.com>
 Ralph Sennhauser <sera@gentoo.org>
 Yasumasa Suenaga  <yasuenag@gmail.com>
+David Smith <dsmith@redhat.com>
 Joshua Sumali <jsumali@redhat.com>
 Pavel Tisnovsky <ptisnovs@redhat.com>
 Christian Thalinger <twisti@complang.tuwien.ac.at>
